--- a/intro.ipynb
+++ b/intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Applied Dats Science Capstone Project\n",
+    "# Applied Data Science Capstone Project\n",
     "## This notebook is created for content of Coursera Capstone project"
    ]
   },
