--- a/intro.ipynb
+++ b/intro.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Hello Capstone Project Course\n"
+     "text": "Hello Capstone Project Course!\n"
     }
    ],
    "source": [
-    "print('Hello Capstone Project Course')"
+    "print('Hello Capstone Project Course!')"
    ]
   },
   {
