Separate report from the code

--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -12,14 +12,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction:\n"
+    "Introduction:\n",
+    "The project is trying to find out the difference between Hong Kong and one of the BIG FOUR city in Maindland china, since most of conversions between Hongkongers and Chinese mentioned how great are their life and their diversity of choices to live.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data:"
+    "Data:  \n",
+    "Data will of coures come from FourSquare API, making use of the explore function, we will make clusters for cities and compare the top 10 common venues of theirs.\n"
    ]
   },
   {
@@ -187,7 +189,7 @@
    "outputs": [],
    "source": [
     "#get neighborhood coordinates and append to df_sh, if no result, then return nan\n",
-    "\n"
+    "def getCoord()\n"
    ]
   }
  ],
