--- a/Report.ipynb
+++ b/Report.ipynb
@@ -14,7 +14,11 @@
    "metadata": {},
    "source": [
     "### Introduction:  \n",
-    "The project is trying to find out the difference between Hong Kong and one of the BIG FOUR city in Maindland china, since most of conversions between Hongkongers and Chinese mentioned how great are their life and their diversity of choices to live.\n"
+    "The project is trying to find out the best spot to start a new cafe/bistro like restaurant in Hong Kong.  \n",
+    "  \n",
+    "Most of Hongkongers have limited time for their lunch, up to the white-collar workers to a retail store sales. Yet Hongkongers are still very picky in their choice of meals, try to have best balance between Cost and Performance.\n",
+    "  \n",
+    "Company ANC have controls and ideal presentation as a chained restaurants, yet all they need right now are clusters of area that they should have their stores in.\n"
    ]
   },
   {
@@ -22,7 +26,7 @@
    "metadata": {},
    "source": [
     "### Data:\n",
-    "Data will of coures come from FourSquare API, making use of the explore function, we will make clusters for cities and compare the top 10 common venues of theirs"
+    "Hong Kong have separated in 18 districts "
    ]
   },
   {
