Update report intro

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -18,7 +18,10 @@
     "  \n",
     "Most of Hongkongers have limited time for their lunch, up to the white-collar workers to a retail store sales. Yet Hongkongers are still very picky in their choice of meals, try to have best balance between Cost and Performance.\n",
     "  \n",
-    "Company ANC have controls and ideal presentation as a chained restaurants, yet all they need right now are clusters of area that they should have their stores in.\n"
+    "Company ANC have controls and ideal presentation as a chained restaurants, yet all they need right now are clusters of area that they should open their store.\n",
+    "\n",
+    "\n",
+    "With the use of Google Maps API, this project demostrates areas in Hong Kong that potentially have large amount of traffic of customers, which shows how the business have a chance to be populated, and number and categories of restaurants at the area, which shows how competitive it will be when starting business at the certain area. Also I will state other bonus benefits found if the Maps data can shows some more.\n"
    ]
   },
   {
@@ -26,7 +29,7 @@
    "metadata": {},
    "source": [
     "### Data:\n",
-    "Hong Kong have separated in 18 districts "
+    "Hong Kong have separated in 18 districts,  "
    ]
   },
   {
