UPDATE using GMA

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "### Data:\n",
-    "Hong Kong have separated in 18 districts,  "
+    "As the "
    ]
   },
   {
