--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'AIzaSyBxBS0qXW35Vt4I31C5v1v53aJiDJ4aH1A'\n",
+    "API_KEY = 'API'\n",
     "R = 1500\n",
     "tst_lat = 22.293981\n",
     "tst_lng = 114.171219"
