--- a/Report.ipynb
+++ b/Report.ipynb
@@ -29,7 +29,12 @@
    "metadata": {},
    "source": [
     "### Data:\n",
-    "As the "
+    "I will use Google Maps API as the main data source, the query response from Places API will return details including facts like address and business status, and comments like the rate and price levels reported by Google Maps users, which made sure that all comments and ratings are surly from the people, not commerical,which make this data not only a business decision but satisfying crowd's needs at the same time.  \n",
+    "\n",
+    "The query response also comes with the place's types identified by Google Maps users, I will use this to find out top ten types of location in a center of Hong Kong Districts, since Google Maps' response does not contain such information, I will make gather total 18 of them from the Wikipedia then let the prgroam reads it for getting the responses.  \n",
+    "\n",
+    "The final result will be 18 districts of Hong Kong labeled by clusters that share common values of the details on Maps data, that we can find ourr targeted area easily, might also can find out how great the rate needed to be a competitive options to customers and what price level will be suitable to be attractive for such cluster of areas\n",
+    "\n"
    ]
   },
   {
